--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,4 +1,20 @@
+:root {
+    --black: rgb(29, 32, 41);
+    --white: rgb(245, 245, 245);
+    --blue: rgb(0, 135, 255);
+    --blue-alpha: rgba(0, 135, 255, .2);
+    --yellow: rgb(249, 205, 70);
+}
+
 body {
     margin: 0;
     font-family: Audiowide, 'Audiowide', monospace;
+}
+
+a {
+    color: inherit;
+}
+
+a:visited {
+    text-decoration: none;
 }
