--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,6 @@
 :root {
     --black: rgb(29, 32, 41);
+    --gray: rgb(49, 49, 49);
     --white: rgb(245, 245, 245);
     --blue: rgb(0, 135, 255);
     --blue-alpha: rgba(0, 135, 255, .2);
