--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,14 +2,18 @@
     --black: rgb(29, 32, 41);
     --gray: rgb(49, 49, 49);
     --white: rgb(245, 245, 245);
+    --dirty-white: #FDFDFD;
+    --pale-gray: #C9C9C9;
     --blue: rgb(0, 135, 255);
     --blue-alpha: rgba(0, 135, 255, .2);
     --yellow: rgb(249, 205, 70);
 }
 
 body {
+    background: linear-gradient(to bottom right, var(--dirty-white) 30%, var(--pale-gray));
+    font-family: audiowide, 'audiowide', monospace;
     margin: 0;
-    font-family: Audiowide, 'Audiowide', monospace;
+    height: 100vh;
 }
 
 a {
