--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,16 +1,24 @@
 :root {
     --black: rgb(29, 32, 41);
-    --gray: rgb(49, 49, 49);
-    --white: rgb(245, 245, 245);
+    --dark-grey: rgb(49, 49, 49);
+    --grey: #898989;
+    --pale-grey: #C9C9C9;
     --dirty-white: #FDFDFD;
-    --pale-gray: #C9C9C9;
+    --white: rgb(245, 245, 245);
+
     --blue: rgb(0, 135, 255);
     --blue-alpha: rgba(0, 135, 255, .2);
     --yellow: rgb(249, 205, 70);
+    --purple: #642B73;
+    --pink: #C6426E;
+}
+
+html {
+    font-family: 'Merriweather', 'Georgia', serif;
 }
 
 body {
-    background: linear-gradient(to bottom right, var(--dirty-white) 30%, var(--pale-gray));
+    background: linear-gradient(to bottom right, var(--dirty-white) 30%, var(--pale-grey));
     font-family: audiowide, 'audiowide', monospace;
     margin: 0;
     height: 100vh;
