--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,8 +3,8 @@
     --dark-grey: rgb(49, 49, 49);
     --grey: #898989;
     --pale-grey: #C9C9C9;
-    --dirty-white: #FDFDFD;
-    --white: rgb(245, 245, 245);
+    --dirty-white: rgb(245, 245, 245);
+    --white: #FDFDFD;
 
     --blue: rgb(0, 135, 255);
     --blue-alpha: rgba(0, 135, 255, .2);
@@ -20,6 +20,7 @@ html {
 body {
     background: linear-gradient(to bottom right, var(--dirty-white) 30%, var(--pale-grey));
     font-family: audiowide, 'audiowide', monospace;
+    /*font-family: Monaco, monospace;*/
     margin: 0;
     height: 100vh;
 }
