--- a/src/utils/base.css
+++ b/src/utils/base.css
@@ -7,10 +7,12 @@
     --white: #FDFDFD;
 
     --blue: rgb(0, 135, 255);
-    --blue-alpha: rgba(0, 135, 255, .2);
     --yellow: rgb(249, 205, 70);
     --purple: #642B73;
     --pink: #C6426E;
+
+    --blue-alpha: rgba(0, 135, 255, .2);
+    --purple-alpha: rgba(108, 15, 128, .2);
 }
 
 html {
