--- a/src/utils/base.css
+++ b/src/utils/base.css
@@ -12,20 +12,15 @@
     --pink: #C6426E;
 
     --blue-alpha: rgba(0, 135, 255, .2);
-    --purple-alpha: rgba(108, 15, 128, .2);
+    --purple-alpha: rgba(108, 15, 128, .4);
+    --pink-alpha: rgba(198, 66, 110, .4);
 }
 
 html {
-    background: var(--white);
-    background: linear-gradient(150deg, var(--white) 60%, var(--pale-grey));
+    background: var(--black);
+    background: linear-gradient(150deg, var(--black), #333);
     font-family: 'Merriweather', 'Georgia', serif;
     overflow-x: hidden;
-}
-
-@media (max-width: 890px) {
-    html {
-        background: var(--white);
-    }
 }
 
 body {
