Add some copy to the about page

--- a/src/utils/base.css
+++ b/src/utils/base.css
@@ -1,5 +1,5 @@
 :root {
-    --black: rgb(29, 32, 41);
+    --black: rgb(29, 32, 41); /* #1D2029 */
     --dark-grey: rgb(49, 49, 49);
     --grey: #898989;
     --pale-grey: #C9C9C9;
